--- a/pub_list.html
+++ b/pub_list.html
@@ -246,9 +246,9 @@
                     division: '',
                     depth1:'벤처투자마트 - 벤처투자마트란?',
                     path:'./portal/html/USR-1051-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-16',
                     mdate:'2022-09-22',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
