--- a/portal/html/USR-1010-F-FORM.html
+++ b/portal/html/USR-1010-F-FORM.html
@@ -340,7 +340,7 @@
                                             <input type="text" id="input_01" value="174-05-01552">
                                         </div>
                                         <div class="box_btn">
-                                            <button class="search">검색</button>
+                                            <button class="search btn_skyblue dialog-link" data-target="#alpop_03">검색</button>
                                         </div>
                                     </div>
                                 </td>
@@ -1113,6 +1113,28 @@
         </div>
     </div>
     <!-- //pop_content -->
+
+</div>
+
+<!-- 사업자등록번호 팝업 -->
+<div id="alpop_03" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img3"></span>
+    </div>
+
+    <div class="pop_content">
+        입력하신 사업자등록번호로<br/>벤쳐IR에서 기업 정보가 검색되었습니다.<br/>
+        기업정보를 다시 불러올 경우 기존에 작성한 정보가 삭제됩니다.<br/>
+        적용하시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_gray pop_close">취소</button>
+            <button class="btn_mint">확인</button>
+        </div>
+    </div>
 
 </div>
 
