--- a/portal/html/USR-1213-H-CONTN.html
+++ b/portal/html/USR-1213-H-CONTN.html
@@ -269,19 +269,19 @@
     <!-- quick menu -->
     <aside class="quick_box">
         <ul>
-            <li class="btn_bell"><a href="javascript:void(0)" class="dialog-link" data-target="#quick_01">알림<span>333</span></a></li>
-            <li class="btn_bookmark"><a href="javascript:void(0)" class="dialog-link" data-target="#quick_02">즐겨찾기</a></li>
+            <li class="btn_bell"><a href="javascript:void(0)">알림<span>333</span></a></li>
+            <li class="btn_bookmark"><a href="javascript:void(0)">즐겨찾기</a></li>
             <li class="btn_chatbot"><a href="javascript:void(0)">챗봇</a></li>
             <li class="btn_top"><a href="javascript:void(0)"><span>TOP</span></a></li>
         </ul>
     </aside>
 
     <!-- conteiner -->
-    <div id="container" class="container type_01">
+    <div id="container" class="container type_03">
         
         <!-- sub title -->
         <div class="tit_box sub_tit">
-            <h2>벤처투자포털</h2>
+            <h2>정보서비스</h2>
             <span>모든 벤처 투자 정보를 하나로</span>
         </div>
         <!-- //sub title -->
@@ -296,27 +296,21 @@
                         <a href="">home</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0);">벤처투자포털</a>
+                        <a href="javascript:void(0);">정보서비스</a>
                         <ul>
+                            <li><a href="">벤처투자매칭</a></li>
+                            <li><a href="">투자가이드</a></li>
                             <li><a href="">벤처투자포털</a></li>
-                            <li><a href="">벤처투자포털</a></li>
-                            <li><a href="">벤처투자포털</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0);">공지사항</a>
-                        <ul>
-                            <li><a href="">공지사항</a></li>
-                            <li><a href="">공지사항</a></li>
-                            <li><a href="">공지사항</a></li>
                         </ul>
                     </li>
                     <li class="selected">
-                        <a href="javascript:void(0);">공지사항</a>
+                        <a href="javascript:void(0);">법령</a>
                         <ul>
-                            <li><a href="">공지사항</a></li>
-                            <li><a href="">공지사항</a></li>
-                            <li><a href="">공지사항</a></li>
+                            <li><a href="">정책</a></li>
+                            <li><a href="">통계</a></li>
+                            <li><a href="">자료실</a></li>
+                            <li><a href="">구인구직</a></li>
+                            <li><a href="">업무처리지원</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -325,27 +319,102 @@
             <div class="inner">
 
                 <div class="tit_box">
-                    <h3>메뉴 gnb + 팝업</h3>
+                    <h3>법령</h3>
                 </div>
     
-                <div class="btn_box">
-                    <a href="javascript:void(0)" class="dialog-link btn_blue" data-target="#note_01">쪽지보내기</a>
-                </div>
+                <div class="tbl_card_list type_04">
 
-                <div class="btn_box_group type_01 left">
-                    <div class="btn_box">
-                        <a href="" class="btn_navy dialog-link" data-target="#alpop_01">경고팝업 1(느낌표모양)</a>
-                    </div>
-                    <div class="btn_box">
-                        <a href="" class="btn_blue dialog-link" data-target="#alpop_02">경고팝업 2(메세지모양)</a>
-                    </div>
-                    <div class="btn_box">
-                        <a href="" class="btn_skyblue dialog-link" data-target="#alpop_03">경고팝업 3(물음표모양)</a>
-                    </div>
-                </div>
-                <br/>
-                <div class="btn_box">
-                    <a href="javascript:void(0)" class="btn_skyblue" onclick="onShowToast('토스트 메세지 입니다.');">토스트메세지</a>
+                    <ul>
+                        <li>
+                            <div class="tit">벤처투자 촉진에 관한 법률</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">중소기업창업 지원법</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">조세특례제한법</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">여신전문금융업법</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">중소기업기본법</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">벤처기업육성에 관한 특별조치법</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">자본시장과 금융투자업에 관한 법률</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder black" title="새 창 이동" target="_blank">법</a>
+                                <a href="" class="ico_folder skyblue" title="새 창 이동" target="_blank">시행령</a>
+                                <a href="" class="ico_folder green" title="새 창 이동" target="_blank">시행규칙</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">코스닥 관련규정</div>
+                            <div class="ico_list">
+                                <a href="" class="ico_folder blue" title="새 창 이동" target="_blank">시행세칙</a>
+                                <a href="" class="ico_folder orange" title="새 창 이동" target="_blank">상장규정</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">
+                                전문개인투자자 등록 및 관리규정<a href="" class="ico_folder" title="새 창 이동" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">
+                                중소기업창업투자회사 등록 및 관리규정<a href="" class="ico_folder" title="새 창 이동" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">
+                                개인투자조합등록 및 투자확인서 발급 규정<a href="" class="ico_folder" title="새 창 이동" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">
+                                벤처투자조합 등록 및 관리규정<a href="" class="ico_folder" title="새 창 이동" target="_blank"></a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit">
+                                창업기획자 등록 및 관리규정<a href="" class="ico_folder" title="새 창 이동" target="_blank"></a>
+                            </div>
+                        </li>
+                    </ul>
+
                 </div>
 
             </div>
@@ -386,7 +455,7 @@
                 </dl>
                 <dl>
                     <dt>FAX : </dt>
-                    <dd>02)2156-2<em>조회수</em>110/2111</dd>
+                    <dd>02)2156-2110/2111</dd>
                 </dl>
             </div>
             <span>Copyright(C) 2022 KVCA. All Rights Reserved.</span>
@@ -394,201 +463,5 @@
     </footer>
 
 </div>
-
-
-<!-- 알림 팝업 -->
-<div id="quick_01" class="quick_dialog">
-
-    <!-- pop_header -->
-    <div class="pop_header">
-        <h5 class="alarm"><span></span>알림</h5>
-        <div class="more">
-            <button>더보기</button>
-        </div>
-    </div>
-    <!-- //pop_header -->
-
-    <!-- pop_content -->
-    <div class="pop_content">
-        <div class="pop_list">
-            <ul>
-                <li>
-                    <a href="">
-                        <span class="pop_state">쪽지알림</span>
-                        IR 자료 요청드립니다.
-                    </a>
-                    <span class="state_box"><span class="state_box red">NEW</span></span>
-                </li>
-                <li>
-                    <a href="">채용공고가 승인되었습니다.</a>
-                    <span class="state_box"><span class="state_box red">NEW</span></span>
-                </li>
-                <li>
-                    <a href="">커뮤니티 5월 정모 공지</a>
-                </li>
-                <li>
-                    <a href="">작성하신 IR 정보가 등록되었습니다.</a>
-                </li>
-                <li>
-                    <a href=""><span class="pop_state">쪽지알림</span>IR 자료 요청</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <!-- //pop_content -->
-
-</div>
-
-<!-- 즐겨찾기 팝업 -->
-<div id="quick_02" class="quick_dialog">
-
-    <!-- pop_header -->
-    <div class="pop_header">
-        <h5 class="favorites"><span></span>즐겨찾기</h5>
-        <div class="more">
-            <button>더보기</button>
-        </div>
-    </div>
-    <!-- //pop_header -->
-
-    <!-- pop_content -->
-    <div class="pop_content">
-        <div class="pop_list">
-            <ul>
-                <li>
-                    <a href="">벤처기업 검색</a>
-                </li>
-                <li>
-                    <a href="">벤처투자마트 신청</a>
-                </li>
-                <li>
-                    <a href="">커뮤니티명 - 게시판명</a>
-                </li>
-            </ul>
-        </div>
-        <div class="btn_box">
-            <button>현재 메뉴 즐겨찾기 추가 +</button>
-        </div>
-    </div>
-    <!-- //pop_content -->
-
-</div>
-
-<!-- 쪽지보내기 팝업 -->
-<div id="note_01" class="dialog note_dialog">
-
-    <div class="tit_box">
-        <h3>쪽지보내기</h3>
-    </div>
-
-    <div class="tbl_box_data">
-        <table>
-            <caption>쪽지보내기</caption>
-            <colgroup>
-                <col width="20%;">
-                <col width="30%;">
-                <col width="20%;">
-                <col width="30%;">
-            </colgroup>
-            <tbody>
-                <tr>
-                    <th scope="row"><label for="radio_01">구분</label></th>
-                    <td colspan="3">투자제안</td>
-                </tr>
-                <tr>
-                    <th scope="row"><label for="input_02">제목</label></th>
-                    <td colspan="3">
-                        <div class="inp_box">
-                            <input type="text" id="input_02">
-                        </div>
-                    </td>
-                </tr>
-                <tr class="bg">
-                    <td colspan="4">
-                        <div class="inp_group">
-                            <div class="textarea_box cont">
-                                <textarea id="textarea_01"></textarea>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-
-    <div class="btn_box_group">
-        <div class="btn_box">
-            <a href="" class="btn_mint shadow">저장</a>
-        </div>
-        <div class="btn_box">
-            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
-        </div>
-    </div>
-
-</div>
-
-<!-- 경고팝업 -->
-<div id="alpop_01" class="dialog alpop_box">
-
-    <div class="pop_header">
-        <span class="img1"></span>
-    </div>
-
-    <div class="pop_content">
-        로그인한 사용자만 이용가능합니다.
-    </div>
-
-    <div class="pop_footer">
-        <div class="btn_box">
-            <button class="btn_mint pop_close">확인</button>
-        </div>
-    </div>
-
-</div>
-<!-- 경고팝업 2 -->
-<div id="alpop_02" class="dialog alpop_box">
-
-    <div class="pop_header">
-        <span class="img2"></span>
-    </div>
-
-    <div class="pop_content">
-        관리자가 작성한<br/>
-        폐쇄사유를 레이어 팝업으로 표출합니다.
-    </div>
-
-    <div class="pop_footer">
-        <div class="btn_box">
-            <button class="btn_mint pop_close">확인</button>
-        </div>
-    </div>
-
-</div>
-<!-- 경고팝업 3 -->
-<div id="alpop_03" class="dialog alpop_box">
-
-    <div class="pop_header">
-        <span class="img3"></span>
-    </div>
-
-    <div class="pop_content">
-        커뮤니티를 폐쇄하면 관련된 모든 데이터가 삭제됩니다. <br/>
-        폐쇄는 회원이 없을 경우에만 가능하며, 소속 회원에게<br/>
-        커뮤니티장 권한을 이관 시킨 후 탈퇴가 가능합니다.  <br/>
-        폐쇄하시겠습니까? 
-    </div>
-
-    <div class="pop_footer">
-        <div class="btn_box">
-            <button class="btn_gray pop_close">취소</button>
-            <button class="btn_mint">확인</button>
-        </div>
-    </div>
-
-</div>
-
-<!-- 토스트 메세지 -->
-<div class="toast_box"><div class="txt"></div></div>
-
 </body>
 </html>
