--- a/portal/html/pub_guide.html
+++ b/portal/html/pub_guide.html
@@ -1290,6 +1290,17 @@
                         </dl>
                     </div>
                 </div>
+                3. 리스트 박스bg
+                <div class="content_list_box">
+                    <div class="list_item">
+                        <div class="tit_box">
+                            <h4><span></span>신청안내</h4>
+                        </div>
+                        <div class="content">
+                            내용
+                        </div>
+                    </div>
+                </div>
             </dd>
         </dl>
 
