--- a/pub_list.html
+++ b/pub_list.html
@@ -237,9 +237,9 @@
                     division: '',
                     depth1:'통합공시(TAB-10)',
                     path:'./portal/html/USR-1040-F-DASH.html',
-                    date:'',
+                    date:'2022-09-20',
                     mdate:'2022-09-15',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
@@ -255,18 +255,18 @@
                     division: '',
                     depth1:'벤처투자마트 - 벤처투자마트 신청안내',
                     path:'./portal/html/USR-1054-F-FORM-INFO.html',
-                    date:'',
+                    date:'2022-09-19',
                     mdate:'2022-09-22',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
                     division: '',
                     depth1:'벤처투자마트 - 벤처투자마트 신청(TAB-3)',
                     path:'./portal/html/USR-1054-F-FORM.html',
-                    date:'',
+                    date:'2022-09-19',
                     mdate:'2022-09-27',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
@@ -285,7 +285,7 @@
                     date:'',
                     mdate:'2022-10-11',
                     con:'작업중',
-                    etc:''
+                    etc:'<span class="red">확인필요</span>'
                 },
                 {
                     division: '',
@@ -448,9 +448,9 @@
                     division: '',
                     depth1:'법령',
                     path:'./portal/html/USR-1213-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-20',
                     mdate:'2022-10-18',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
@@ -884,10 +884,10 @@
                     division: '',
                     depth1:'비밀번호 찾기',
                     path:'./portal/html/USR-2031-F-FORM.html',
-                    date:'',
+                    date:'2022-09-19',
                     mdate:'2022-11-01',
-                    con:'작업중',
-                    etc:'<span class="red">확인필요</span>[1차디자인]'
+                    con:'완료',
+                    etc:'[1차디자인]'
                 },
                 {
                     division: '',
