--- a/portal/html/USR-20121-F-FORM.html
+++ b/portal/html/USR-20121-F-FORM.html
@@ -419,7 +419,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th scope="row"><label for="sel_01">전화번호<span class="req">*</span></label></th>
+                                    <th scope="row"><label for="sel_01">전화번호</label></th>
                                     <td colspan="3">
                                         <div class="inp_group tel">
                                             <div class="sel_box">
@@ -570,6 +570,7 @@
                                             <div class="inp_box min">
                                                 <input type="text" id="input_005" placeholder="사업자등록증에 기재된 대표자명 입력">
                                             </div>
+                                            <span class="txt_etc">※ 2인 이상인 경우, 첫번째 기재된 대표자명을 입력</span>
                                             <div class="txt_warning">대표자명을 입력해 주세요.</div>
                                         </div>
                                     </td>
