--- a/pub_list.html
+++ b/pub_list.html
@@ -792,9 +792,9 @@
                     division: '',
                     depth1:'유관기관 안내(TAB-5)',
                     path:'./portal/html/USR-1361-H-CONTN.html',
-                    date:'',
+                    date:'2022-09-21',
                     mdate:'2022-11-08',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
 
