--- a/portal/html/USR-2012-F-FORM.html
+++ b/portal/html/USR-2012-F-FORM.html
@@ -419,7 +419,7 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <th scope="row"><label for="sel_01">전화번호<span class="req">*</span></label></th>
+                                    <th scope="row"><label for="sel_01">전화번호</label></th>
                                     <td colspan="3">
                                         <div class="inp_group tel">
                                             <div class="sel_box">
